fix: minor style fix to spacing between Bottom Panel components

--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -31,7 +31,7 @@
     }
 
     .analyze-tool-and-scene-info-container {
-        @apply w-analysis-tool-container-width mx-6 3xl:mx-16;
+        @apply w-analysis-tool-container-width mx-10 3xl:mx-16;
     }
 }
 
